# openapi/dcos.yaml
@@ -2324,6 +2324,38 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/MetronomeV1Error"
+    put:
+      description: Update an existing job.
+      operationId: V1UpdateJob
+      tags:
+        - metronome
+      parameters:
+        - name: jobId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        $ref: "#/components/requestBodies/MetronomeV1Job"
+      responses:
+        "200":
+          description: Job updated.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MetronomeV1Job"
+        "404":
+          description: No job found for given `jobId`.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MetronomeV1Error"
+        "422":
+          description: The given entity can not be processed due to validation errors.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MetronomeV1Error"
     delete:
       description: Delete a job. All data about that job will be deleted.
       operationId: V1DeleteJob
@@ -4172,6 +4204,7 @@ components:
                 constraints:
                   type: array
                   description: The array of constraints to place this job.
+                  nullable: true
                   items:
                     type: object
                     additionalProperties: false
